--- a/app/views/steps/show.html.haml
+++ b/app/views/steps/show.html.haml
@@ -12,7 +12,7 @@
       %fieldset.govuk-fieldset{"aria-describedby" => "#{@name}-hint"}
         %legend.govuk-fieldset__legend.govuk-fieldset__legend--xl
           %h1.govuk-fieldset__heading= @title
-        %span.govuk-hint{id: "#{@name}-hint"}
+        %span.govuk-hint.more_than_one{id: "#{@name}-hint"}
           %strong
             = @hint
         .form_errors.display_none
